--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,256 +1,30 @@
 ---
 ---
 
-@inproceedings{suarez2017netflow,
-  title={A NetFlow/IPFIX implementation with OpenFlow},
-  author={Su{\'a}rez-Varela, Jos{\'e} and Barlet-Ros, Pere and Carela-Espanol, Valent{\i}n},
-  booktitle={TERENA Networking Conference, 2017},
-  year={2017}
+############
+# 2023
+############
+@inproceedings{latif2023detecting,
+  title={Detecting Contextual Network Anomalies with Graph Neural Networks},
+  author={Latif, Hamid and Su{\'a}rez-Varela, Jos{\'e} and Cabellos-Aparicio, Albert and Barlet-Ros, Pere},
+  booktitle={Proceedings of the ACM CoNEXT Graph Neural Networking Workshop},
+  pages={25--30},
+  year={2023},
+  month={dec},
+  website={https://doi.org/10.1145/3630049.3630171},
+  pdf={https://arxiv.org/pdf/2312.06342.pdf},
+  bibtex_show={true}
 }
 
-@inproceedings{suarez2017towards,
-  title={Towards a NetFlow implementation for OpenFlow Software-Defined Networks},
-  author={Su{\'a}rez-Varela, Jos{\'e} and Barlet-Ros, Pere},
-  booktitle={29th International Teletraffic Congress (ITC), 2017},
-  volume={1},
-  pages={187--195},
-  year={2017},
-  organization={IEEE}
-}
-
-@article{suarez2018flow,
-  title={Flow monitoring in Software-Defined Networks: Finding the accuracy/performance tradeoffs},
-  author={Su{\'a}rez-Varela, Jos{\'e} and Barlet-Ros, Pere},
-  journal={Computer Networks},
-  volume={135},
-  pages={289--301},
-  year={2018},
-  publisher={Elsevier}
-}
-
-@inproceedings{suarez2018sbar,
-  title={SBAR: SDN flow-Based monitoring and Application Recognition},
-  author={Su{\'a}rez-Varela, Jos{\'e} and Barlet-Ros, Pere},
-  booktitle={Proceedings of the Symposium on SDN Research (SOSR)},
-  year={2018},
-  organization={ACM}
-}
-
-@inproceedings{suarez2018towards,
-  title={Towards accurate classification of HTTPS traffic in Software-Defined Networks},
-  author={Su{\'a}rez-Varela, Jos{\'e} and Barlet-Ros, Pere},
-  booktitle={International Instrumentation and Measurement Technology Conference (I2MTC)},
-  year={2018}
-}
-
-@inproceedings{rusek2019unveiling,
-  title={Unveiling the potential of Graph Neural Networks for network modeling and optimization in SDN},
-  author={Rusek, Krzysztof and Su{\'a}rez-Varela, Jos{\'e} and Mestres, Albert and Barlet-Ros, Pere and Cabellos-Aparicio, Albert},
-  booktitle={Proceedings of the ACM Symposium on SDN Research (SOSR)},
-  pages={140--151},
-  year={2019}
-}
-
-@inproceedings{suarez2019feature,
-  title={Feature engineering for Deep Reinforcement Learning based routing},
-  author={Su{\'a}rez-Varela, Jos{\'e} and Mestres, Albert and Yu, Junlin and Kuang, Li and Feng, Haoyu and Barlet-Ros, Pere and Cabellos-Aparicio, Albert},
-  booktitle={IEEE International Conference on Communications (ICC)},
-  year={2019}
-}
-
-@inproceedings{zayuelas2019detecting,
-  title={Detecting cryptocurrency miners with NetFlow/IPFIX network measurements},
-  author={Zayuelas i Mu{\~n}oz, Jordi and Su{\'a}rez-Varela, Jos{\'e} and Barlet-Ros, Pere},
-  booktitle={IEEE International Symposium on Measurements and Networking (M\&N)},
-  year={2019}
-}
-
-@inproceedings{suarez2019challenging,
-  title={Challenging the generalization capabilities of Graph Neural Networks for network modeling},
-  author={Su{\'a}rez-Varela, Jos{\'e} and Carol-Bosch, Sergi and Rusek, Krzysztof and Almasan, Paul and Arias, Marta and Barlet-Ros, Pere and Cabellos-Aparicio, Albert},
-  booktitle={Proceedings of ACM SIGCOMM Posters and Demos},
-  pages={114--115},
-  year={2019},
-  organization={ACM}
-}
-
-@article{suarez2019routing,
-  title={Routing in optical transport networks with deep reinforcement learning},
-  author={Su{\'a}rez-Varela, Jos{\'e} and Mestres, Albert and Yu, Junlin and Kuang, Li and Feng, Haoyu and Cabellos-Aparicio, Albert and Barlet-Ros, Pere},
-  journal={Journal of Optical Communications and Networking},
-  volume={11},
-  pages={547--558},
-  year={2019},
-  publisher={IEEE/OSA}
-}
-
-@article{rusek2020routenet,
-  title={RouteNet: Leveraging Graph Neural Networks for network modeling and optimization in SDN},
-  author={Rusek, Krzysztof and Su{\'a}rez-Varela, Jos{\'e} and Almasan, Paul and Barlet-Ros, Pere and Cabellos-Aparicio, Albert},
-  journal={IEEE Journal on Selected Areas in Communications (JSAC)},
-  year={2020}
-}
-
-@inproceedings{badia2019towards,
-  title={Towards more realistic network models based on Graph Neural Networks},
-  author={Badia-Sampera, Arnau and Su{\'a}rez-Varela, Jos{\'e} and Almasan, Paul and Rusek, Krzysztof and Barlet-Ros, Pere and Cabellos-Aparicio, Albert},
-  booktitle={Proceedings of ACM CoNEXT student workshop},
-  pages={14--16},
-  year={2019},
-  organization={ACM}
-}
-
-@article{almasan2022deep,
-  title={Deep Reinforcement Learning meets Graph Neural Networks: exploring a routing optimization use case},
-  author={Almasan, Paul and Su{\'a}rez-Varela, Jos{\'e} and Badia-Sampera, Arnau and Rusek, Krzysztof and Barlet-Ros, Pere and Cabellos-Aparicio, Albert},
-  journal={Computer Communications},
-  year={2022}
-}
-
-@inproceedings{pujol2021netxplain,
-  title={NetXplain: Real-time explainability of Graph Neural Networks applied to Computer Networks},
-  author={Pujol-Perich, David and Su{\'a}rez-Varela, Jos{\'e} and Xiao, Shihan and Wu, Bo and Cabellos-Aparicio, Albert and Barlet-Ros, Pere},
-  booktitle={MLSys workshop on Graph Neural Networks and Systems (GNNSys)},
-  year={2021}
-}
-
-@inproceedings{almasan2021towards,
-  title={Towards Real-Time Routing Optimization with Deep Reinforcement Learning: Open Challenges},
-  author={Almasan, Paul and Su{\'a}rez-Varela, Jos{\'e} and Wu, Bo and Xiao, Shihan and Barlet-Ros, Pere and Cabellos-Aparicio, Albert},
-  booktitle={IEEE HPSR SARNET},
-  year={2021}
-}
-
-@inproceedings{suarez2019routing,
-  title={Routing Based on Deep Reinforcement Learning in Optical Transport Networks},
-  author={Su{\'a}rez-Varela, Jos{\'e} and Mestres, Albert and Yu, Junlin and Kuang, Li and Feng, Haoyu and Barlet-Ros, Pere and Cabellos-Aparicio, Albert},
-  booktitle={Optical Fiber Communications Conference and Exhibition (OFC), San Diego, USA},
-  year={2019}
-}
-
-@article{suarez2021graph,
-  title={The Graph Neural Networking Challenge: A Worldwide Competition for Education in AI/ML for Networks},
-  author={Su{\'a}rez-Varela, Jos{\'e} and Ferriol-Galm{\'e}s, Miquel and L{\'o}pez, Albert and Almasan, Paul and Bern{\'a}rdez, Guillermo and Pujol-Perich, David and Rusek, Krzysztof and Bonniot, Lo{\"\i}ck and Neumann, Christoph and Schnitzler, Fran{\c{c}}ois and others},
-  journal={ACM SIGCOMM Computer Communication Review},
-  volume={51},
-  number={3},
-  year={2021}
-}
-
-@inproceedings{pujol2021unveiling,
-  title={Unveiling the potential of Graph Neural Networks for robust Intrusion Detection},
-  author={Pujol-Perich, David and Su{\'a}rez-Varela, Jos{\'e} and Cabellos-Aparicio, Albert and Barlet-Ros, Pere},
-  booktitle={Workshop on AI in Networks and Distributed Systems},
-  year={2021}
-}
-
-@incollection{pujol2021ignnition,
-  title={IGNNITION: fast prototyping of graph neural networks for communication networks},
-  author={Pujol-Perich, David and Su{\'a}rez-Varela, Jos{\'e} and Ferriol-Galm{\'e}s, Miquel and Wu, Bo and Xiao, Shihan and Cheng, Xiangle and Cabellos-Aparicio, Albert and Barlet-Ros, Pere},
-  booktitle={Proceedings of ACM SIGCOMM Poster and Demo Sessions},
-  pages={71--73},
-  year={2021}
-}
-
-@inproceedings{pujol2021ignnition,
-  title={IGNNITION: A framework for fast prototyping of Graph Neural Networks},
-  author={Pujol-Perich, David and Su{\'a}rez-Varela, Jos{\'e} and Ferriol-Galm{\'e}s, Miquel and Xiao, Shihan and Wu, Bo and Cabellos-Aparicio, Albert and Barlet-Ros, Pere},
-  booktitle={MLSys workshop on Graph Neural Networks and Systems (GNNSys)},
-  year={2021}
-}
-
-@article{pujol2021netxplain,
-  title={NetXplain: Real-time Explainability of Graph Neural Networks applied to Networking},
-  author={Pujol-Perich, David and Suárez-Varela, Jos{\'e} and Xiao, Shihan and Cabellos-Aparicio, Albert and Barlet-Ros, Pere},
-  journal={ITU Journal on Future and Evolving Technologies (ITU J-FET)},
-  volume={2},
-  number={4},
-  year={2021}
-}
-
-@inproceedings{bernardez2021machine,
-  title={Is Machine Learning Ready for Traffic Engineering Optimization?},
-  author={Bern{\'a}rdez, Guillermo and Su{\'a}rez-Varela, Jos{\'e} and L{\'o}pez, Albert and Wu, Bo and Xiao, Shihan and Cheng, Xiangle and Barlet-Ros, Pere and Cabellos-Aparicio, Albert},
-  booktitle={IEEE International Conference on Network Protocols (ICNP)},
-  year={2021}
-}
-
-@article{careglio2021results,
-  title={Results and Achievements of the ALLIANCE Project: New Network Solutions for 5G and Beyond},
-  author={Careglio, Davide and Spadaro, Salvatore and Cabellos, Albert and Lazaro, Jose Antonio and Barlet-Ros, Pere and Gen{\'e}, Joan Manel and Perell{\'o}, Jordi and Agraz Bujan, Fernando and Su{\'a}rez-Varela, Jos{\'e} and Pages, Albert and others},
-  journal={Applied Sciences},
-  volume={11},
-  number={19},
-  pages={9130},
-  year={2021},
-  publisher={MDPI}
-}
-
-@article{ferriol2022building,
-  title={Building a Digital Twin for Network Optimization Using Graph Neural Networks},
-  author={Ferriol-Galm{\'e}s, Miquel and Su{\'a}rez-Varela, Jos{\'e} and Paillise, Jordi and Shi, Xiang and Xiao, Shihan and Cheng, Xiangle and Barlet-Ros, Pere and Cabellos-Aparicio, Albert},
-  journal={Computer Networks},
-  year={2022},
-  publisher={Elsevier}
-}
-
-@article{suarez2022graph,
-  title={Graph Neural Networks for Communication Networks: Context, Use Cases and Opportunities},
-  author={Su{\'a}rez-Varela, Jos{\'e} and Almasan, Paul and Ferriol-Galm{\'e}s, Miquel and Rusek, Krzysztof and Geyer, Fabien and Cheng, Xiangle and Shi, Xiang and Xiao, Shihan and Scarselli, Franco and Cabellos-Aparicio, Albert and others},
-  journal={IEEE Network},
-  year={2022}
-}
-
-@inproceedings{ferriol2022routenet,
-  title={RouteNet-Erlang: A Graph Neural Network for Network Performance Evaluation},
-  author={Ferriol-Galm{\'e}s, Miquel and Rusek, Krzysztof and Su{\'a}rez-Varela, Jos{\'e} and Xiao, Shihan and Shi, Xiang and Cheng, Xiangle and Wu, Bo and Barlet-Ros, Pere and Cabellos-Aparicio, Albert},
-  booktitle={IEEE INFOCOM - IEEE International Conference on Computer Communications},
-  year={2022}
-}
-
-@article{pujol2021ignnition,
-  title={IGNNITION: Bridging the Gap between Graph Neural Networks and Networking Systems},
-  author={Pujol-Perich, David and Su{\'a}rez-Varela, Jos{\'e} and Ferriol, Miquel and Xiao, Shihan and Wu, Bo and Cabellos-Aparicio, Albert and Barlet-Ros, Pere},
-  journal={IEEE Network},
-  volume={35},
-  number={6},
-  pages={171--177},
-  year={2021},
-  publisher={IEEE}
-}
-
-@article{almasan2022network,
-  title={Network Digital Twin: Context, Enabling Technologies and Opportunities},
-  author={Almasan, Paul and Ferriol-Galm{\'e}s, Miquel and Paillisse, Jordi and Su{\'a}rez-Varela, Jos{\'e} and Perino, Diego and L{\'o}pez, Diego and Perales, Antonio Agustin Pastor and Harvey, Paul and Ciavaglia, Laurent and Wong, Leon and others},
-  journal={IEEE Communications Magazine},
-  year={2022}
-}
-
-@article{pujol2022unveiling,
-  title={Unveiling the potential of graph neural networks for robust intrusion detection},
-  author={Pujol-Perich, David and Su{\'a}rez-Varela, Jos{\'e} and Cabellos-Aparicio, Albert and Barlet-Ros, Pere},
-  journal={ACM SIGMETRICS Performance Evaluation Review},
-  volume={49},
-  number={4},
-  pages={111--117},
-  year={2022},
-  publisher={ACM New York, NY, USA}
-}
-
-@inproceedings{happ2022exploring,
-  title={Exploring the Limitations of Current Graph Neural Networks for Network Modeling},
-  author={Happ, Martin and Du, Jia Lei and Herlich, Matthias and Maier, Christian and Dorfinger, Peter and Su{\'a}rez-Varela, Jos{\'e}},
-  booktitle={IEEE/IFIP Network Operations and Management Symposium (NOMS)},
-  pages={1--8},
-  year={2022},
-  organization={IEEE}
-}
-
-@inproceedings{rusek2022fast,
-  title={Fast Traffic Engineering by Gradient Descent with Learned Differentiable Routing},
-  author={Rusek, Krzysztof and Almasan, Paul and Su{\'a}rez-Varela, Jos{\'e} and Cho{\l}da, Piotr and Barlet-Ros, Pere and Cabellos-Aparicio, Albert},
-  booktitle={International Conference on Network and Service Management (CNSM)},
-  year={2022}
+@inproceedings{almasan2023enhancing,
+  title={Enhancing 5G Radio Planning with Graph Representations and Deep Learning},
+  author={Almasan, Paul and Su{\'a}rez-Varela, Jos{\'e} and Lutu, Andra and Cabellos-Aparicio, Albert and Barlet-Ros, Pere},
+  booktitle={Proceedings of the ACM SIGCOMM 5G-MeMU workshop},
+  year={2023},
+  month={nov},
+  website={https://doi.org/10.1145/3609382.3610509},
+  pdf={https://dl.acm.org/doi/pdf/10.1145/3609382.3610509?casa_token=dvJRjMEpnRwAAAAA:x4CHLrJjSjdVyoQiH-biJKpvoURyp4KA0deXHcXs6-BUa0CPPr3h2LJG0b9xCE-lGUoeGBu38jj_},
+  bibtex_show={true}
 }
 
 @article{ferriol2023routenet,
@@ -261,6 +35,16 @@
   month={may},
   website={https://doi.org/10.1109/TNET.2023.3269983},
   pdf={https://arxiv.org/pdf/2212.12070},
+  bibtex_show={true}
+}
+
+@article{bernardez2023graphcc,
+  title={GraphCC: A Practical Graph Learning-based Approach to Congestion Control in Datacenters},
+  author={Bern{\'a}rdez, Guillermo and Su{\'a}rez-Varela, Jos{\'e} and Shi, Xiang and Xiao, Shihan and Cheng, Xiangle and Barlet-Ros, Pere and Cabellos-Aparicio, Albert},
+  journal={arXiv preprint arXiv:2308.04905},
+  year={2023},
+  month={aug},
+  pdf={https://arxiv.org/pdf/2308.04905},
   bibtex_show={true}
 }
 
@@ -278,35 +62,393 @@
   bibtex_show={true}
 }
 
-@article{bernardez2023graphcc,
-  title={GraphCC: A Practical Graph Learning-based Approach to Congestion Control in Datacenters},
-  author={Bern{\'a}rdez, Guillermo and Su{\'a}rez-Varela, Jos{\'e} and Shi, Xiang and Xiao, Shihan and Cheng, Xiangle and Barlet-Ros, Pere and Cabellos-Aparicio, Albert},
-  journal={arXiv preprint arXiv:2308.04905},
-  year={2023},
-  month={aug},
-  pdf={https://arxiv.org/pdf/2308.04905},
-  bibtex_show={true}
-}
+############
+# 2022
+############
 
-@inproceedings{almasan2023enhancing,
-  title={Enhancing 5G Radio Planning with Graph Representations and Deep Learning},
-  author={Almasan, Paul and Su{\'a}rez-Varela, Jos{\'e} and Lutu, Andra and Cabellos-Aparicio, Albert and Barlet-Ros, Pere},
-  booktitle={Proceedings of the ACM SIGCOMM 5G-MeMU workshop},
-  year={2023},
-  month={nov},
-  website={https://doi.org/10.1145/3609382.3610509},
-  pdf={https://dl.acm.org/doi/pdf/10.1145/3609382.3610509?casa_token=dvJRjMEpnRwAAAAA:x4CHLrJjSjdVyoQiH-biJKpvoURyp4KA0deXHcXs6-BUa0CPPr3h2LJG0b9xCE-lGUoeGBu38jj_},
-  bibtex_show={true}
-}
-
-@inproceedings{latif2023detecting,
-  title={Detecting Contextual Network Anomalies with Graph Neural Networks},
-  author={Latif, Hamid and Su{\'a}rez-Varela, Jos{\'e} and Cabellos-Aparicio, Albert and Barlet-Ros, Pere},
-  booktitle={Proceedings of the ACM CoNEXT Graph Neural Networking Workshop},
-  pages={25--30},
-  year={2023},
+@article{almasan2022deep,
+  title={Deep Reinforcement Learning meets Graph Neural Networks: exploring a routing optimization use case},
+  author={Almasan, Paul and Su{\'a}rez-Varela, Jos{\'e} and Badia-Sampera, Arnau and Rusek, Krzysztof and Barlet-Ros, Pere and Cabellos-Aparicio, Albert},
+  journal={Computer Communications},
+  year={2022},
   month={dec},
-  website={https://doi.org/10.1145/3630049.3630171},
-  pdf={https://arxiv.org/pdf/2312.06342.pdf},
+  website={https://doi.org/10.1016/j.comcom.2022.09.029v},
+  pdf={https://arxiv.org/pdf/1910.07421.pdf},
+  bibtex_show={true}
+}
+
+@inproceedings{rusek2022fast,
+  title={Fast Traffic Engineering by Gradient Descent with Learned Differentiable Routing},
+  author={Rusek, Krzysztof and Almasan, Paul and Su{\'a}rez-Varela, Jos{\'e} and Cho{\l}da, Piotr and Barlet-Ros, Pere and Cabellos-Aparicio, Albert},
+  booktitle={International Conference on Network and Service Management (CNSM)},
+  year={2022},
+  month={dec},
+  website={https://doi.org/10.23919/CNSM55787.2022.9964923},
+  pdf={https://arxiv.org/pdf/2209.10380},
+  bibtex_show={true}
+}
+
+@article{pujol2021ignnition,
+  title={IGNNITION: Bridging the Gap between Graph Neural Networks and Networking Systems},
+  author={Pujol-Perich, David and Su{\'a}rez-Varela, Jos{\'e} and Ferriol, Miquel and Xiao, Shihan and Wu, Bo and Cabellos-Aparicio, Albert and Barlet-Ros, Pere},
+  journal={IEEE Network},
+  volume={35},
+  number={6},
+  pages={171--177},
+  year={2021},
+  month={nov},
+  website={https://doi.org/10.1109/MNET.001.2100266},
+  pdf={https://arxiv.org/pdf/2109.06715},
+  bibtex_show={true}
+}
+
+@article{ferriol2022building,
+  title={Building a Digital Twin for Network Optimization Using Graph Neural Networks},
+  author={Ferriol-Galm{\'e}s, Miquel and Su{\'a}rez-Varela, Jos{\'e} and Paillise, Jordi and Shi, Xiang and Xiao, Shihan and Cheng, Xiangle and Barlet-Ros, Pere and Cabellos-Aparicio, Albert},
+  journal={Computer Networks},
+  year={2022},
+  publisher={Elsevier},
+  month={nov},
+  website={https://doi.org/10.1016/j.comnet.2022.109329},
+  pdf={https://www.sciencedirect.com/science/article/pii/S1389128622003681/pdfft?md5=5fcdcfcc8e149cba42b86fd6e222ec03&pid=1-s2.0-S1389128622003681-main.pdf},
+  bibtex_show={true} 
+}
+
+@article{suarez2022graph,
+  title={Graph Neural Networks for Communication Networks: Context, Use Cases and Opportunities},
+  author={Su{\'a}rez-Varela, Jos{\'e} and Almasan, Paul and Ferriol-Galm{\'e}s, Miquel and Rusek, Krzysztof and Geyer, Fabien and Cheng, Xiangle and Shi, Xiang and Xiao, Shihan and Scarselli, Franco and Cabellos-Aparicio, Albert and others},
+  journal={IEEE Network},
+  year={2022},
+  month={aug},
+  website={https://doi.org/10.1109/MNET.123.2100773},
+  pdf={https://arxiv.org/pdf/2112.14792},
+  bibtex_show={true}
+}
+
+@article{almasan2022network,
+  title={Network Digital Twin: Context, Enabling Technologies and Opportunities},
+  author={Almasan, Paul and Ferriol-Galm{\'e}s, Miquel and Paillisse, Jordi and Su{\'a}rez-Varela, Jos{\'e} and Perino, Diego and L{\'o}pez, Diego and Perales, Antonio Agustin Pastor and Harvey, Paul and Ciavaglia, Laurent and Wong, Leon and others},
+  journal={IEEE Communications Magazine},
+  year={2022},
+  month={jun},
+  website={https://doi.org/10.1109/MCOM.001.2200012},
+  pdf={https://arxiv.org/pdf/2205.14206},
+  bibtex_show={true}
+}
+
+@article{pujol2022unveiling,
+  title={Unveiling the potential of graph neural networks for robust intrusion detection},
+  author={Pujol-Perich, David and Su{\'a}rez-Varela, Jos{\'e} and Cabellos-Aparicio, Albert and Barlet-Ros, Pere},
+  journal={ACM SIGMETRICS Performance Evaluation Review},
+  volume={49},
+  number={4},
+  pages={111--117},
+  year={2022},
+  month={jun},
+  website={https://doi.org/10.1145/3543146.3543171},
+  pdf={https://dl.acm.org/doi/pdf/10.1145/3543146.3543171?casa_token=GbVuoWwcTbgAAAAA:egfhHvcb8rAyZmpywn8ePHN4RgQzaI9Pq-QBgeCPkMK4_ekmQAzoyxweuCTJddRkG4NXfoLT9oMk},
+  bibtex_show={true}
+}
+
+@inproceedings{ferriol2022routenet,
+  title={RouteNet-Erlang: A Graph Neural Network for Network Performance Evaluation},
+  author={Ferriol-Galm{\'e}s, Miquel and Rusek, Krzysztof and Su{\'a}rez-Varela, Jos{\'e} and Xiao, Shihan and Shi, Xiang and Cheng, Xiangle and Wu, Bo and Barlet-Ros, Pere and Cabellos-Aparicio, Albert},
+  booktitle={IEEE INFOCOM - IEEE International Conference on Computer Communications},
+  year={2022},
+  month={may},
+  website={https://doi.org/10.1109/INFOCOM48880.2022.9796944},
+  pdf={https://arxiv.org/pdf/2202.13956},
+  bibtex_show={true}
+}
+
+@inproceedings{happ2022exploring,
+  title={Exploring the Limitations of Current Graph Neural Networks for Network Modeling},
+  author={Happ, Martin and Du, Jia Lei and Herlich, Matthias and Maier, Christian and Dorfinger, Peter and Su{\'a}rez-Varela, Jos{\'e}},
+  booktitle={IEEE/IFIP Network Operations and Management Symposium (NOMS)},
+  pages={1--8},
+  year={2022},
+  month={apr},
+  website={https://doi.org/10.1109/NOMS54207.2022.9789708},
+  pdf={https://www.salzburgresearch.at/wp-content/uploads/2022/01/GNN_Limits.pdf},
+  bibtex_show={true}
+}
+
+############
+# 2021
+############
+
+@inproceedings{bernardez2021machine,
+  title={Is Machine Learning Ready for Traffic Engineering Optimization?},
+  author={Bern{\'a}rdez, Guillermo and Su{\'a}rez-Varela, Jos{\'e} and L{\'o}pez, Albert and Wu, Bo and Xiao, Shihan and Cheng, Xiangle and Barlet-Ros, Pere and Cabellos-Aparicio, Albert},
+  booktitle={IEEE International Conference on Network Protocols (ICNP)},
+  year={2021},
+  month={nov},
+  website={https://doi.org/10.1109/ICNP52444.2021.9651930},
+  pdf={https://arxiv.org/pdf/2109.01445},
+  bibtex_show={true}
+}
+
+@article{careglio2021results,
+  title={Results and Achievements of the ALLIANCE Project: New Network Solutions for 5G and Beyond},
+  author={Careglio, Davide and Spadaro, Salvatore and Cabellos, Albert and Lazaro, Jose Antonio and Barlet-Ros, Pere and Gen{\'e}, Joan Manel and Perell{\'o}, Jordi and Agraz Bujan, Fernando and Su{\'a}rez-Varela, Jos{\'e} and Pages, Albert and others},
+  journal={Applied Sciences},
+  volume={11},
+  number={19},
+  pages={9130},
+  year={2021},
+  month={sep},
+  website={https://doi.org/10.3390/app11199130},
+  pdf={https://www.mdpi.com/2076-3417/11/19/9130/pdf?version=1633927076},
+  bibtex_show={true}
+}
+
+@article{pujol2021netxplain,
+  title={NetXplain: Real-time Explainability of Graph Neural Networks applied to Networking},
+  author={Pujol-Perich, David and Suárez-Varela, Jos{\'e} and Xiao, Shihan and Cabellos-Aparicio, Albert and Barlet-Ros, Pere},
+  journal={ITU Journal on Future and Evolving Technologies (ITU J-FET)},
+  volume={2},
+  number={4},
+  year={2021},
+  month={aug},
+  website={https://doi.org/10.52953/AKZH5253},
+  pdf={https://upcommons.upc.edu/bitstream/handle/2117/360254/S-JNL-VOL2.ISSUE4-2021-A05-PDF-E.pdf?sequence=3&isAllowed=y},
+  bibtex_show={true}
+}
+
+@incollection{pujol2021ignnition,
+  title={IGNNITION: fast prototyping of graph neural networks for communication networks},
+  author={Pujol-Perich, David and Su{\'a}rez-Varela, Jos{\'e} and Ferriol-Galm{\'e}s, Miquel and Wu, Bo and Xiao, Shihan and Cheng, Xiangle and Cabellos-Aparicio, Albert and Barlet-Ros, Pere},
+  booktitle={Proceedings of ACM SIGCOMM Poster and Demo Sessions},
+  pages={71--73},
+  year={2021},
+  month={aug},
+  website={https://doi.org/10.1145/3472716.3472853},
+  pdf={https://dl.acm.org/doi/pdf/10.1145/3472716.3472853},
+  bibtex_show={true}
+}
+
+@article{suarez2021graph,
+  title={The Graph Neural Networking Challenge: A Worldwide Competition for Education in AI/ML for Networks},
+  author={Su{\'a}rez-Varela, Jos{\'e} and Ferriol-Galm{\'e}s, Miquel and L{\'o}pez, Albert and Almasan, Paul and Bern{\'a}rdez, Guillermo and Pujol-Perich, David and Rusek, Krzysztof and Bonniot, Lo{\"\i}ck and Neumann, Christoph and Schnitzler, Fran{\c{c}}ois and others},
+  journal={ACM SIGCOMM Computer Communication Review},
+  volume={51},
+  number={3},
+  year={2021},
+  month={jul},
+  website={https://doi.org/10.1145/3477482.3477485},
+  pdf={https://dl.acm.org/doi/pdf/10.1145/3477482.3477485?casa_token=Ce79pJ_CAGAAAAAA:ZRaE8-X-Yr4vQiqJ9_ufOUsRfqwZYPM99r6YT_caqo3Y-oegvGMSZ5MCU9T5kmnLAGx-IIAYj2If},
+  bibtex_show={true}
+}
+
+@inproceedings{almasan2021towards,
+  title={Towards Real-Time Routing Optimization with Deep Reinforcement Learning: Open Challenges},
+  author={Almasan, Paul and Su{\'a}rez-Varela, Jos{\'e} and Wu, Bo and Xiao, Shihan and Barlet-Ros, Pere and Cabellos-Aparicio, Albert},
+  booktitle={IEEE HPSR SARNET},
+  year={2021},
+  month={jul},
+  website={https://doi.org/10.1109/HPSR52026.2021.9481864},
+  pdf={https://arxiv.org/pdf/2106.09754},
+  bibtex_show={true}
+}
+
+@inproceedings{pujol2021ignnition,
+  title={IGNNITION: A framework for fast prototyping of Graph Neural Networks},
+  author={Pujol-Perich, David and Su{\'a}rez-Varela, Jos{\'e} and Ferriol-Galm{\'e}s, Miquel and Xiao, Shihan and Wu, Bo and Cabellos-Aparicio, Albert and Barlet-Ros, Pere},
+  booktitle={MLSys workshop on Graph Neural Networks and Systems (GNNSys)},
+  year={2021},
+  month={apr},
+  html={https://gnnsys.github.io/},
+  pdf={https://gnnsys.github.io/papers/GNNSys21_paper_4.pdf},
+  bibtex_show={true}
+}
+
+@inproceedings{pujol2021netxplain,
+  title={NetXplain: Real-time explainability of Graph Neural Networks applied to Computer Networks},
+  author={Pujol-Perich, David and Su{\'a}rez-Varela, Jos{\'e} and Xiao, Shihan and Wu, Bo and Cabellos-Aparicio, Albert and Barlet-Ros, Pere},
+  booktitle={MLSys workshop on Graph Neural Networks and Systems (GNNSys)},
+  year={2021},
+  month={apr},
+  website={https://gnnsys.github.io/},
+  pdf={https://gnnsys.github.io/papers/GNNSys21_paper_7.pdf},
+  bibtex_show={true}
+}
+
+
+############
+# 2020
+############
+
+@article{suarez2020enabling,
+  title={Enabling knowledge-defined networks: deep reinforcement learning, graph neural networks and network analytics},
+  author={Su{\'a}rez-Varela Maci{\`a}, Jos{\'e} Rafael},
+  year={2020},
+  month={jun},
+  publisher={PhD Thesis, Universitat Polit{\`e}cnica de Catalunya},
+  html={https://upcommons.upc.edu/handle/2117/192449?locale-attribute=en},
+  pdf={https://upcommons.upc.edu/bitstream/handle/2117/192449/TJRS-VM1de1.pdf?sequence=1&isAllowed=y},
+  bibtex_show={true}
+}
+
+@article{rusek2020routenet,
+  title={RouteNet: Leveraging Graph Neural Networks for network modeling and optimization in SDN},
+  author={Rusek, Krzysztof and Su{\'a}rez-Varela, Jos{\'e} and Almasan, Paul and Barlet-Ros, Pere and Cabellos-Aparicio, Albert},
+  journal={IEEE Journal on Selected Areas in Communications (JSAC)},
+  year={2020},
+  month={jun},
+  website={https://doi.org/10.1109/JSAC.2020.3000405},
+  pdf={https://arxiv.org/pdf/1910.01508},
+  bibtex_show={true}
+}
+
+############
+# 2019
+############
+
+@inproceedings{badia2019towards,
+  title={Towards more realistic network models based on Graph Neural Networks},
+  author={Badia-Sampera, Arnau and Su{\'a}rez-Varela, Jos{\'e} and Almasan, Paul and Rusek, Krzysztof and Barlet-Ros, Pere and Cabellos-Aparicio, Albert},
+  booktitle={Proceedings of ACM CoNEXT student workshop},
+  pages={14--16},
+  year={2019},
+  month={dec},
+  website={https://doi.org/10.1145/3360468.3366773},
+  pdf={https://dl.acm.org/doi/pdf/10.1145/3360468.3366773?casa_token=w4AOJ9XCTtgAAAAA:XnXs43pnqO2wLR-sLuv8IB37S5BAgk54Zwl9VBegSpyJlr4NWkFwK6sx5q1TEZ3CCABNjiMGMH4c},
+  bibtex_show={true}
+}
+
+@article{suarez2019routing,
+  title={Routing in optical transport networks with deep reinforcement learning},
+  author={Su{\'a}rez-Varela, Jos{\'e} and Mestres, Albert and Yu, Junlin and Kuang, Li and Feng, Haoyu and Cabellos-Aparicio, Albert and Barlet-Ros, Pere},
+  journal={Journal of Optical Communications and Networking},
+  volume={11},
+  pages={547--558},
+  year={2019},
+  month={sep},
+  website={https://doi.org/10.1364/JOCN.11.000547},
+  pdf={https://opg.optica.org/viewmedia.cfm?uri=jocn-11-11-547&seq=0&casa_token=PRGI0XkCuPAAAAAA:TY8CZmeXQS0OlaLS2dYqME_poygiGa--2gXg-pg8VxEidmY4UDDBUjzO-jUNbuvLbZYX917x8eTYk2s},
+  bibtex_show={true}
+}
+
+@inproceedings{suarez2019challenging,
+  title={Challenging the generalization capabilities of Graph Neural Networks for network modeling},
+  author={Su{\'a}rez-Varela, Jos{\'e} and Carol-Bosch, Sergi and Rusek, Krzysztof and Almasan, Paul and Arias, Marta and Barlet-Ros, Pere and Cabellos-Aparicio, Albert},
+  booktitle={Proceedings of ACM SIGCOMM Posters and Demos},
+  pages={114--115},
+  year={2019},
+  month={aug},
+  website={https://doi.org/10.1145/3342280.3342327},
+  pdf={https://dl.acm.org/doi/pdf/10.1145/3342280.3342327?casa_token=GSU3-W1KKtUAAAAA:9OzVuhjB9B9Rw5pToSz0Y8mHnkslW3mKIs325YPeqM8u5eNhuqErMA97RVE4IjJYEJowxAKtD0bk},
+  bibtex_show={true}
+}
+
+@inproceedings{zayuelas2019detecting,
+  title={Detecting cryptocurrency miners with NetFlow/IPFIX network measurements},
+  author={Zayuelas i Mu{\~n}oz, Jordi and Su{\'a}rez-Varela, Jos{\'e} and Barlet-Ros, Pere},
+  booktitle={IEEE International Symposium on Measurements and Networking (M\&N)},
+  year={2019},
+  month={aug},
+  website={https://doi.org/10.1109/IWMN.2019.8804995},
+  pdf={https://upcommons.upc.edu/bitstream/handle/2117/190279/Paper_IEEE_MN_postprint.pdf?sequence=3&isAllowed=y},
+  bibtex_show={true}
+}
+
+@inproceedings{suarez2019feature,
+  title={Feature engineering for Deep Reinforcement Learning based routing},
+  author={Su{\'a}rez-Varela, Jos{\'e} and Mestres, Albert and Yu, Junlin and Kuang, Li and Feng, Haoyu and Barlet-Ros, Pere and Cabellos-Aparicio, Albert},
+  booktitle={IEEE International Conference on Communications (ICC)},
+  year={2019},
+  month={may},
+  website={https://doi.org/10.1109/ICC.2019.8761276},
+  pdf={https://people.ac.upc.edu/pbarlet/papers/drl-otn.icc2019.pdf},
+  bibtex_show={true}
+}
+
+@inproceedings{rusek2019unveiling,
+  title={Unveiling the potential of Graph Neural Networks for network modeling and optimization in SDN},
+  author={Rusek, Krzysztof and Su{\'a}rez-Varela, Jos{\'e} and Mestres, Albert and Barlet-Ros, Pere and Cabellos-Aparicio, Albert},
+  booktitle={Proceedings of the ACM Symposium on SDN Research (SOSR)},
+  pages={140--151},
+  year={2019},
+  month={apr},
+  website={https://doi.org/10.1145/3314148.3314357},
+  pdf={https://dl.acm.org/doi/pdf/10.1145/3314148.3314357?casa_token=oGKjp09TgYEAAAAA:69Aziy5G2U--_ubLTnF6BZeWabJkXPT9BhUoULBvlI92Bd5R9BnbFAhPM3mL7ajkwiK-UfPG8aMw},
+  bibtex_show={true}
+}
+
+@inproceedings{suarez2019routing,
+  title={Routing Based on Deep Reinforcement Learning in Optical Transport Networks},
+  author={Su{\'a}rez-Varela, Jos{\'e} and Mestres, Albert and Yu, Junlin and Kuang, Li and Feng, Haoyu and Barlet-Ros, Pere and Cabellos-Aparicio, Albert},
+  booktitle={Optical Fiber Communications Conference and Exhibition (OFC), San Diego, USA},
+  year={2019},
+  month={mar},
+  website={https://doi.org/10.1364/OFC.2019.M2A.6},
+  pdf={https://opg.optica.org/viewmedia.cfm?uri=OFC-2019-M2A.6&seq=0&casa_token=eTUvQzO6tGkAAAAA:GGqnYHeUMxpzV3GdFhwDlvBijWpNwTDrLd-Q9V0BBK3DXCRRTMnEi8WqJCqw1rFJqLYsos5Pzt8_Ifg},
+  bibtex_show={true}
+}
+
+############
+# 2018
+############
+
+@inproceedings{suarez2018towards,
+  title={Towards accurate classification of HTTPS traffic in Software-Defined Networks},
+  author={Su{\'a}rez-Varela, Jos{\'e} and Barlet-Ros, Pere},
+  booktitle={International Instrumentation and Measurement Technology Conference (I2MTC)},
+  year={2018},
+  month={may},
+  website={https://doi.org/10.1109/I2MTC.2018.8409549},
+  pdf={https://people.ac.upc.edu/pbarlet/papers/https-classification.i2mtc2018.pdf},
+  bibtex_show={true}
+}
+
+@article{suarez2018flow,
+  title={Flow monitoring in Software-Defined Networks: Finding the accuracy/performance tradeoffs},
+  author={Su{\'a}rez-Varela, Jos{\'e} and Barlet-Ros, Pere},
+  journal={Computer Networks},
+  volume={135},
+  pages={289--301},
+  year={2018},
+  month={apr},
+  website={https://doi.org/10.1016/j.comnet.2018.02.020},
+  pdf={https://people.ac.upc.edu/pbarlet/papers/flowmon.comnet2018.pdf},
+  bibtex_show={true}
+}
+
+@inproceedings{suarez2018sbar,
+  title={SBAR: SDN flow-Based monitoring and Application Recognition},
+  author={Su{\'a}rez-Varela, Jos{\'e} and Barlet-Ros, Pere},
+  booktitle={Proceedings of the ACM Symposium on SDN Research (SOSR)},
+  year={2018},
+  month={mar},
+  website={https://doi.org/10.1145/3185467.3190788},
+  pdf={https://dl.acm.org/doi/pdf/10.1145/3185467.3190788?casa_token=1P6rS4aLE8sAAAAA:ZBEYzE3W1Tze1waST3dOC0I38xPKiKfc3zr3XNHPYt48b96MU7q6nFUAYYLfdTq5baMDzyfNTSXW},
+  bibtex_show={true}
+}
+
+############
+# 2017
+############
+
+@inproceedings{suarez2017towards,
+  title={Towards a NetFlow implementation for OpenFlow Software-Defined Networks},
+  author={Su{\'a}rez-Varela, Jos{\'e} and Barlet-Ros, Pere},
+  booktitle={IEEE International Teletraffic Congress (ITC), 2017},
+  volume={1},
+  pages={187--195},
+  year={2017},
+  month={sep},
+  website={https://doi.org/10.23919/ITC.2017.8064355},
+  pdf={https://upcommons.upc.edu/bitstream/handle/2117/114570/netflow-for-openflow.itc29.pdf},
+  bibtex_show={true}
+}
+
+@inproceedings{suarez2017netflow,
+  title={A NetFlow/IPFIX implementation with OpenFlow},
+  author={Su{\'a}rez-Varela, Jos{\'e} and Barlet-Ros, Pere and Carela-Espanol, Valent{\i}n},
+  booktitle={TERENA Networking Conference, 2017},
+  year={2017},
+  month={jun},
+  pdf={https://upcommons.upc.edu/bitstream/handle/2117/114775/tnc17_paper_NetflowWithOpenFlow.pdf},
+  html={https://tnc17.geant.org/core/presentation/26.html},
   bibtex_show={true}
 }
