Adding new publication

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,6 +2,20 @@
 ---
 
 ############
+# 2024
+############
+@inproceedings{kalntis2024through,
+  title={Through the Telco Lens: A Countrywide Empirical Study of Cellular Handovers},
+  author={Kalntis, Michail and Su{\'a}rez-Varela, Jos{\'e} and Iglesias, Jes{\'u}s Oma{\~n}a and Bhattacharjee, Anup Kiran and Iosifidis, George and Kuipers, Fernando A and Lutu, Andra},
+  booktitle={Proceedings of the 2024 ACM on Internet Measurement Conference},
+  pages={51--67},
+  year={2024},
+  website={https://doi.org/10.1145/3646547.3688452},
+  pdf={https://dl.acm.org/doi/pdf/10.1145/3646547.3688452},
+  bibtex_show={true}
+}
+
+############
 # 2023
 ############
 @inproceedings{latif2023detecting,
