--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,6 +2,18 @@
 ---
 
 ############
+# 2025
+############
+@inproceedings{martinez2024evaluation,
+  title={An Evaluation of RAN Sustainability Strategies in Production Networks},
+  author={Mart{\'\i}nez-Durive, Orlando E and Su{\'a}rez-Varela, Jos{\'e} and Oma{\~n}a Iglesias, Jes{\'u}s and Lutu, Andra and Fiore, Marco and others},
+  booktitle={IEEE INFOCOM},
+  year={2025},
+  pdf={https://dspace.networks.imdea.org/bitstream/handle/20.500.12761/1882/INFOCOM25%20RAN%20energy%20savings%20dspace.pdf?sequence=4},
+  bibtex_show={true}
+}
+
+############
 # 2024
 ############
 @inproceedings{kalntis2024through,
