Update publications and profile photo
Update publications 2025 + profile photo

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,6 +4,13 @@
 ############
 # 2025
 ############
+@inproceedings{suarez2025uncovering,
+  title={Uncovering Issues in the Radio Access Network by Looking at the Neighbors},
+  author={Su{\'a}rez-Varela, Jos{\'e} and Lutu, Andra},
+  booktitle={IEEE International Conference on Machine Learning for Communication and Networking (ICMLCN)},
+  year={2025}
+}
+
 @inproceedings{martinez2024evaluation,
   title={An Evaluation of RAN Sustainability Strategies in Production Networks},
   author={Mart{\'\i}nez-Durive, Orlando and Su{\'a}rez-Varela, Jos{\'e} and Oma{\~n}a Iglesias, Jes{\'u}s and Lutu, Andra and Fiore, Marco},
@@ -11,6 +18,33 @@
   year={2025},
   pdf={https://dspace.networks.imdea.org/bitstream/handle/20.500.12761/1882/INFOCOM25%20RAN%20energy%20savings%20dspace.pdf?sequence=4},
   bibtex_show={true}
+}
+
+@article{latif2025gat,
+  title={GAT-AD: Graph Attention Networks for contextual anomaly detection in network monitoring},
+  author={Latif-Martinez, Hamid and Suarez-Varela, Jose and Cabellos-Aparicio, Albert and Barlet-Ros, Pere},
+  journal={Computers \& Industrial Engineering},
+  volume={200},
+  pages={110830},
+  year={2025},
+  publisher={Elsevier}
+}
+
+@inproceedings{latiftsgfm,
+  title={TSGFM-Towards a Graph Foundation Model for Time Series Analysis in Network Monitoring},
+  author={Latif-Mart{\i}nez, Hamid and Casas, Pedro and Su{\'a}rez-Varela, Jos{\'e} and Cabellos-Aparicio, Albert and Barlet-Ros, Pere},
+  booktitle={IEEE/IFIP Network Traffic Measurement and Analysis Conference (TMA) - Poster Session},
+  year={2025}
+}
+
+@article{bernardez2025graphcc,
+  title={GraphCC: A practical graph learning-based approach to Congestion Control in datacenters},
+  author={Bern{\'a}rdez, Guillermo and Su{\'a}rez-Varela, Jos{\'e} and Shi, Xiang and Xiao, Shihan and Cheng, Xiangle and Barlet-Ros, Pere and Cabellos-Aparicio, Albert},
+  journal={Computer Networks},
+  volume={257},
+  pages={110981},
+  year={2025},
+  publisher={Elsevier}
 }
 
 ############
@@ -61,16 +95,6 @@
   month={may},
   website={https://doi.org/10.1109/TNET.2023.3269983},
   pdf={https://arxiv.org/pdf/2212.12070},
-  bibtex_show={true}
-}
-
-@article{bernardez2023graphcc,
-  title={GraphCC: A Practical Graph Learning-based Approach to Congestion Control in Datacenters},
-  author={Bern{\'a}rdez, Guillermo and Su{\'a}rez-Varela, Jos{\'e} and Shi, Xiang and Xiao, Shihan and Cheng, Xiangle and Barlet-Ros, Pere and Cabellos-Aparicio, Albert},
-  journal={arXiv preprint arXiv:2308.04905},
-  year={2023},
-  month={aug},
-  pdf={https://arxiv.org/pdf/2308.04905},
   bibtex_show={true}
 }
 
