Fixed links to publication documents

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,7 +8,9 @@
   title={Uncovering Issues in the Radio Access Network by Looking at the Neighbors},
   author={Su{\'a}rez-Varela, Jos{\'e} and Lutu, Andra},
   booktitle={IEEE International Conference on Machine Learning for Communication and Networking (ICMLCN)},
-  year={2025}
+  year={2025},
+  pdf={https://arxiv.org/pdf/2504.14686},
+  bibtex_show={true}
 }
 
 @inproceedings{martinez2024evaluation,
@@ -27,14 +29,20 @@
   volume={200},
   pages={110830},
   year={2025},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  website={https://doi.org/10.1016/j.cie.2024.110830},
+  pdf={https://upcommons.upc.edu/server/api/core/bitstreams/c7b9a9b9-76e2-4418-b676-176252e02e57/content},
+  bibtex_show={true}
+}
 }
 
 @inproceedings{latiftsgfm,
   title={TSGFM-Towards a Graph Foundation Model for Time Series Analysis in Network Monitoring},
   author={Latif-Mart{\i}nez, Hamid and Casas, Pedro and Su{\'a}rez-Varela, Jos{\'e} and Cabellos-Aparicio, Albert and Barlet-Ros, Pere},
   booktitle={IEEE/IFIP Network Traffic Measurement and Analysis Conference (TMA) - Poster Session},
-  year={2025}
+  year={2025},
+  pdf={https://tma.ifip.org/2025/wp-content/uploads/sites/14/2025/06/tma2025_poster15.pdf},
+  bibtex_show={true}
 }
 
 @article{bernardez2025graphcc,
@@ -45,6 +53,9 @@
   pages={110981},
   year={2025},
   publisher={Elsevier}
+  website={https://doi.org/10.1016/j.comnet.2024.110981},
+  pdf={https://upcommons.upc.edu/server/api/core/bitstreams/8f0ade1d-3e37-4758-8f81-6c1c4eea89d7/content},
+  bibtex_show={true}
 }
 
 ############
