Fixed link to publication

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -52,7 +52,7 @@
   volume={257},
   pages={110981},
   year={2025},
-  publisher={Elsevier}
+  publisher={Elsevier},
   website={https://doi.org/10.1016/j.comnet.2024.110981},
   pdf={https://upcommons.upc.edu/server/api/core/bitstreams/8f0ade1d-3e37-4758-8f81-6c1c4eea89d7/content},
   bibtex_show={true}
